Fix wrong color on pagination .active

--- a/reach/web/src/css/results.css
+++ b/reach/web/src/css/results.css
@@ -11,3 +11,6 @@
 		border-bottom: 1px solid $greyLight;
 	}
 }
+.pagination .page-item.active a {
+	background-color: $cyanPrimary;
+}
